# sthira

./: README.md  pyproject.toml  sthira.py  test_constant.py
.github/workflows/: test.yml
