[tool.poetry]
name = "sthira"
version = "0.2.0"
description = "The `Constant` class is a metaclass for creating classes with constant attributes"
authors = ["neelabalan <neelabalan.n@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
